# simulation.io

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  dev-build-all.bat  dev-build-all.sh
assets/: main.json
include/game/: BattleConsumer.h  BattleProducer.h  BattleTypes.h  GameManager.h  IBattle.h  ICharacter.h  MeleeBattle.h  WarriorDummy.h
include/managers/: JsonManager.h
include/simulate.io/game/: BattleConsumer.h  BattleProducer.h  BattleTypes.h  IBattle.h  ICharacter.h  MeleeBattle.h  WarriorDummy.h
include/utils/: OsUtils.h  pch.h
src/: main.cpp  pch.h
src/battles/: MeleeBattle.cpp
src/game/: BattleConsumer.cpp  BattleProducer.cpp  GameManager.cpp
src/managers/: JsonManager.cpp
src/utils/: OsUtils.cpp  noncopyable.h  string-utils.hpp
